--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "http://pot:1111"
+base_url = "https://carolinavildosola.com"
 
 # The site title
 title = "Carolina Vildósola"
